--- a/public/style.css
+++ b/public/style.css
@@ -28,7 +28,18 @@ header {
 
 #content {
     padding: 20px;
+    max-width: 800px; /* Same as the banner image's max-width */
+    margin: 0 auto;
 }
+
+/* Responsive adjustments for wider screens */
+@media (min-width: 801px) {
+    #content {
+        padding: 0 20px; /* Add horizontal padding for a bit of space */
+    }
+}
+
+
 
 .reveal {
     opacity: 0;
@@ -133,11 +144,17 @@ footer a:hover {
 
 /* Styling for the banner image */
 .responsive-banner {
+    /*width: 100%;*/
+    /*height: auto;*/
+    /*display: block;*/
+    /*margin: 0 auto 20px;*/
+    /*max-width: 800px;*/
+    /*border-radius: 10px;*/
     width: 100%;
+    max-width: 800px; /* Ensure image aligns with content width */
     height: auto;
     display: block;
     margin: 0 auto 20px;
-    max-width: 800px;
     border-radius: 10px;
 }
 
